--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/Pastel-Software/Vuze-Contracts#readme",
   "dependencies": {
     "@openzeppelin/contracts": "^4.3.2",
+    "@remix-project/remixd": "^0.5.6",
     "@uniswap/lib": "^4.0.1-alpha",
     "@uniswap/v2-core": "^1.0.1",
     "solhint": "^3.3.6",
